# path-finding

./: .clang-format  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  make_graph.bat  make_graph.sh  version.h
.github/workflows/: build-linux.yml  build-windows.yml  check-clang-format.yml
data/: test.scen
data/sample_test/: test.map
data/situations/colision-cross/: cross-through.scen  cross.map  swap-position.scen
data/situations/step-over/: step-over.map  step-over.scen
data/situations/swap-order/: swap-order.map  swap-order.scen
src/: collision.cpp  collision.h  color.cpp  color.h  constraints.cpp  constraints.h  constraints.test.cpp  geometry.cpp  geometry.h  geometry.test.cpp  graph.cpp  graph.h  graph.test.cpp  graphviz.cpp  graphviz.h  main.cpp  main.test.cpp  path-finding.cpp  path-finding.h  path-finding.test.cpp  runner.cpp  runner.h  runner.test.cpp  scenario.cpp  scenario.h  sequence.cpp  sequence.h  sequence.test.cpp  simulation.cpp  simulation.h  simulation.test.cpp  space-time-a-star-search.h  strings.cpp  strings.h  strings.test.cpp  version.h.in
